--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 # database init, supports mysql too
-database=h2
+database=postgres
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
+spring.datasource.username=${POSTGRES_USER:petclinic}
+spring.datasource.password=${POSTGRES_PASS:petclinic}
+# SQL is written to be idempotent so this is safe
+spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
