--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # database init, supports mysql too
 database=postgres
+spring.profiles.active=postgres
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
 spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
