--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 # database init, supports mysql too
-database=postgres
+database=h2
 spring.profiles.active=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
-spring.datasource.username=${POSTGRES_USER:petclinic}
-spring.datasource.password=${POSTGRES_PASS:petclinic}
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath*:db/${database}/schema.sql
