--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database init, supports mysql too
-database=h2
+database=postgres
 spring.profiles.active=postgres
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
