--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -4,3 +4,5 @@ spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
 # SQL is written to be idempotent so this is safe
 spring.datasource.initialization-mode=always
+# added
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
