--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.data=classpath*:db/${database}/data.sql
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
 # Internationalization
