--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,11 @@ spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.postgresql.Driver
+
 
 # database init, supports mysql too
 #database=h2
