--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.postgresql.Driver
 
 
 # database init, supports mysql too
