--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,15 @@ spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 #spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialize=true
+spring.jpa.hibernate.show-sql=true
+spring.datasource.continue-on-error=true
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
 
 # database init, supports mysql too
