--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,11 +1,6 @@
-#database=postgres
-#spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
-#spring.datasource.username=${POSTGRES_USER:petclinic}
-#spring.datasource.password=${POSTGRES_PASS:petclinic}
-## SQL is written to be idempotent so this is safe
-#spring.datasource.initialization-mode=always
-## added
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.database=POSTGRESQL
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=none
+database=postgres
+spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
+spring.datasource.username=${POSTGRES_USER:petclinic}
+spring.datasource.password=${POSTGRES_PASS:petclinic}
+# SQL is written to be idempotent so this is safe
+spring.datasource.initialization-mode=always
