--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,5 @@
-database=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
-spring.datasource.username=${POSTGRES_USER:petclinic}
-spring.datasource.password=${POSTGRES_PASS:petclinic}
-# SQL is written to be idempotent so this is safe
-spring.datasource.initialization-mode=always
-# added
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-#spring.jpa.hibernate.ddl-auto=none
-spring.datasource.initialize=true
-spring.jpa.hibernate.show-sql=true
-spring.datasource.continue-on-error=true
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
-
-
-
 # database init, supports mysql too
-#database=h2
-spring.profiles.active=postgres
-# SQL is written to be idempotent so this is safe
-spring.datasource.initialization-mode=always
+database=h2
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
