--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,6 +1,7 @@
-database=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
-spring.datasource.username=${POSTGRES_USER:petclinic}
-spring.datasource.password=${POSTGRES_PASS:petclinic}
-# SQL is written to be idempotent so this is safe
-spring.datasource.initialization-mode=always
+#spring.profiles.active=postgres
+#database=postgres
+#spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
+#spring.datasource.username=${POSTGRES_USER:petclinic}
+#spring.datasource.password=${POSTGRES_PASS:petclinic}
+## SQL is written to be idempotent so this is safe
+#spring.datasource.initialization-mode=always
