--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uw
 spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
 # SQL is written to be idempotent so this is safe
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 # database init, supports mysql too
 spring.datasource.schema=classpath*:db/${database}/schema.sql
