--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uw
 spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
 # SQL is written to be idempotent so this is safe
-# spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
+spring.jpa.hibernate.ddl-auto=create
 # database init, supports mysql too
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
@@ -15,7 +16,7 @@ spring.datasource.data=classpath*:db/${database}/data.sql
 spring.thymeleaf.mode=HTML
 
 # JPA
-spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 
 # Internationalization
