--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ database=postgres
 spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
 spring.datasource.username=${POSTGRES_USER:petclinic}
 spring.datasource.password=${POSTGRES_PASS:petclinic}
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 
 # database init, supports mysql too
 spring.datasource.schema=classpath*:db/${database}/schema.sql
