--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,5 @@
 # database init, supports mysql too
-spring.profiles.active=postgres
-database=postgres
-spring.datasource.url=${POSTGRES_URL:jdbc:postgresql://demo-petclinic.cexcekm5uwgb.us-east-1.rds.amazonaws.com:5432/petclinic}
-spring.datasource.username=${POSTGRES_USER:petclinic}
-spring.datasource.password=${POSTGRES_PASS:petclinic}
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
-# database init, supports mysql too
+database=h2
 spring.datasource.schema=classpath*:db/${database}/schema.sql
 spring.datasource.data=classpath*:db/${database}/data.sql
 
